--- a/src/Resources/templates/remove.php.twig
+++ b/src/Resources/templates/remove.php.twig
@@ -4,14 +4,14 @@
  * {{ property.documentation }}
  {% endperline %}
  {% else -%}
- * Add {{ property.name | singularize }}
+ * Remove {{ property.name | singularize }}
  {% endif -%}
  *
  * @param {{ property.type }} ${{ property.name }}
- * @return $this
+ * @return {{ property.class }}
  * @throws \BadMethodCallException if the number of arguments is not correct
  */
-public function remove{{ property.name | singularize | classify }}({{ property.type }} ${{ property.name | singularize }})
+{{ property.willGenerateSet ? 'public' : 'private' }} function remove{{ property.name | singularize | classify }}({{ property.type }} ${{ property.name | singularize }})
 {
     if (func_num_args() != 1) {
         throw new \BadMethodCallException(
@@ -22,6 +22,21 @@ public function remove{{ property.name | singularize | classify }}({{ property.t
         );
     }
 
+    if (! $this->{{ property.name}} instanceof \Doctrine\Common\Collections\Collection
+        || ! $this->{{ property.name}}->contains(${{ property.name | singularize }})
+    ) {
+        return $this;
+    }
+
     $this->{{ property.name}}->removeElement(${{ property.name | singularize }});
+
+{% if property.referencedProperty %}
+    $method = new \ReflectionMethod(${{ property.name | singularize }}, '
+    {{- property.isReferencingCollection ? 'remove' : 'set' }}
+    {{- property.referencedProperty | classify | singularize }}');
+    $method->setAccessible(true);
+    $method->invoke(${{ property.name | singularize }}, {{ property.isReferencingCollection ? '$this' : 'null' }});
+    $method->setAccessible(false);
+{% endif %}
     return $this;
 }
