Use property name instead of type in entity not found exception

--- a/src/Resources/templates/get.php.twig
+++ b/src/Resources/templates/get.php.twig
@@ -51,7 +51,7 @@ public function {{  property.type == 'boolean' ? 'is' : 'get' }}{{ property.name
 
     if ($this->{{ property.name }} === null) {
         throw new \Doctrine\ORM\EntityNotFoundException(
-            'Property {{ property.type | classify }} references an other entity ' .
+            'Property "{{ property.name }}" references an other entity ' .
             'but is not found and also is not nullable for parameter {{ property.name }}.'
         );
     }
