get usefull @return annotation for complex types to work with PDT

--- a/src/Resources/templates/get.php.twig
+++ b/src/Resources/templates/get.php.twig
@@ -8,7 +8,8 @@
  {% endif -%}
  *
  {% if property.collection -%}
- * @return \Doctrine\Common\Collections\Collection | {{ property.type }}[]
+ * @return {{ property.fullyQualifiedType }}[]
+ * @return \Doctrine\Common\Collections\Collection
  {% else -%}
  * @return {{ property.type }}
  {% endif -%}
