--- a/src/Resources/templates/get.php.twig
+++ b/src/Resources/templates/get.php.twig
@@ -9,7 +9,7 @@
  *
  {% if property.collection -%}
  * @return {{ property.fullyQualifiedType }}[]
- * @return \Doctrine\Common\Collections\Collection
+ * @return \Hostnet\Component\AccessorGenerator\Collection\ConstCollectionInterface
  {% else -%}
  * @return {{ property.type }}
  {% endif -%}
@@ -57,6 +57,8 @@ public function {{  property.type == 'boolean' ? 'is' : 'get' }}{{ property.name
 
 {% if property.type == 'integer' %}
     return (int) $this->{{ property.name }};
+{% elseif property.collection %}
+    return new ImmutableCollection($this->{{ property.name }});
 {% else %}
     return $this->{{ property.name }};
 {% endif %}
