--- a/src/Resources/templates/get.php.twig
+++ b/src/Resources/templates/get.php.twig
@@ -11,7 +11,7 @@
  * @return {{ property.fullyQualifiedType }}[]
  * @return \Hostnet\Component\AccessorGenerator\Collection\ConstCollectionInterface
  {% else -%}
- * @return {{ property.type }}
+ * @return {{ property.type }}{{ not property.willGenerateStrict ? '|null' }}
  {% endif -%}
  * @throws \InvalidArgumentException
  */
@@ -25,7 +25,7 @@ public function {{ getter }}()
             )
         );
     }
-{% if not property.isNullable and (not property.isComplexType  or property.type == '\\DateTime') %}
+{% if property.willGenerateStrict and not property.isNullable and (not property.isComplexType  or property.type == '\\DateTime') %}
     if ($this->{{ property.name }} === null) {
         throw new \LogicException(sprintf(
             'Property {{ property.name }} is null, but the column is not nullable, '.
@@ -48,7 +48,7 @@ public function {{ getter }}()
     if ($this->{{ property.name }} === null) {
         $this->{{ property.name }} = new \Doctrine\Common\Collections\ArrayCollection();
     }
-{% elseif property.isComplexType and not property.isNullable and property.type != '\\DateTime' %}
+{% elseif property.willGenerateStrict and property.isComplexType and not property.isNullable and property.type != '\\DateTime' %}
 
     if ($this->{{ property.name }} === null) {
         throw new \Doctrine\ORM\EntityNotFoundException('Missing required property "{{ property.name }}".');
