--- a/src/Resources/templates/set.php.twig
+++ b/src/Resources/templates/set.php.twig
@@ -122,6 +122,14 @@
         throw new \LogicException('{{ property.class }} objects can not be added to more than one {{ property.type }}.');
     }
 {% endif %}
+{%- if property.referencedProperty and not property.isReferencingCollection %}
+
+    $property = new \ReflectionProperty(${{ property.name }}, '
+    {{- property.referencedProperty }}');
+    $property->setAccessible(true);
+    $property->setValue(${{ property.name }}, $this);
+    $property->setAccessible(false);
+{% endif %}
 
     $this->{{ property.name }} = ${{ property.name }};
     return $this;
