do not set referenced property in OneToOne when setting to null

--- a/src/Resources/templates/set.php.twig
+++ b/src/Resources/templates/set.php.twig
@@ -123,12 +123,13 @@
     }
 {% endif %}
 {%- if property.referencedProperty and not property.isReferencingCollection %}
-
-    $property = new \ReflectionProperty(${{ property.name }}, '
-    {{- property.referencedProperty }}');
-    $property->setAccessible(true);
-    $property->setValue(${{ property.name }}, $this);
-    $property->setAccessible(false);
+    if (${{ property.name }} !== null) {
+        $property = new \ReflectionProperty(${{ property.name }}, '
+        {{- property.referencedProperty }}');
+        $property->setAccessible(true);
+        $property->setValue(${{ property.name }}, $this);
+        $property->setAccessible(false);
+    }
 {% endif %}
 
     $this->{{ property.name }} = ${{ property.name }};
