--- a/src/Resources/templates/set.php.twig
+++ b/src/Resources/templates/set.php.twig
@@ -10,7 +10,7 @@
  {% if default != property.default -%}
  * Generated a default null value because the doctrine column is nullable.
  * Still require an explicit argument to set the column. If you do not like
- * this message, specify a default value or use @JoinColumn(nullable=false).
+ * this message, specify a default value or use JoinColumn(nullable=false).
  *
  {% endif -%}
  * @param {{ property.type }} ${{ property.name }}
