--- a/src/Resources/templates/set.php.twig
+++ b/src/Resources/templates/set.php.twig
@@ -98,6 +98,18 @@
     {% perline %}
     {% include 'decimal.php.twig' %}
     {% endperline %}
+{% elseif property.type == 'string' %}
+
+    if (${{ property.name }} === null
+        || is_scalar(${{ property.name }})
+        || is_callable([${{ property.name }}, '__toString'])
+    ) {
+        ${{ property.name }} = (string)${{ property.name }};
+    } else {
+        throw new \InvalidArgumentException(
+            'Parameter {{ property.name }} must be convertable to string.'
+        );
+    }
 {% else %}
 
     if (!is_{{ property.type == 'boolean' ? 'bool' : property.type }}(${{ property.name }})) {
