--- a/src/Resources/templates/set.php.twig
+++ b/src/Resources/templates/set.php.twig
@@ -116,29 +116,39 @@ public function set{{ property.name | classify }}(
     }
 {% endif %}
 {% endif %}
-{%- if property.length %}
+{% if property.length %}
 
     if (strlen(${{ property.name }}) > {{ property.length }}) {
         throw new \LengthException('Parameter \'${{ property.name }}\' should not be longer than {{ property.length }} characters.');
     }
 {% endif %}
-{%- if not property.willGenerateSet and property.isReferencingCollection %}
-
-    if (${{ property.name }} && ! ${{ property.name }}->get{{ property.referencedProperty | classify}}()->contains($this)) {
-        throw new \LogicException('Please use {{ property.name | classify}}::add{{ property.referencedProperty | singularize | classify }}().');
-    } elseif (${{ property.name }} && $this->{{ property.name }}) {
-        throw new \LogicException('{{ property.class }} objects can not be added to more than one {{ property.type }}.');
-    }
-{% endif %}
-{%- if property.referencedProperty and not property.isReferencingCollection %}
+{% if property.referencedProperty %}
     // Create reflection property.
     $property = new \ReflectionProperty({{ property.type }}::class, '{{ property.referencedProperty }}');
     $property->setAccessible(true);
 
+{% if property.isReferencingCollection %}
+    // Unset old value and set the new value
+    if ($this->{{ property.name }}) {
+        $value = $property->getValue($this->{{ property.name }});
+        $value && $value->removeElement($this);
+    }
+
+    // keeping the inverse side up-to-date.
+    if (${{ property.name }}) {
+        $value = $property->getValue(${{ property.name }});
+        if ($value) {
+            ${{ property.name }} && $value->add($this);
+        } else {
+            $property->setValue(${{ property.name }}, new \Doctrine\Common\Collections\ArrayCollection([$this]));
+        }
+    }
+{% else %}
     // Unset old value and set the new value
     // keeping the inverse side up-to-date.
     $this->{{ property.name }} && $property->setValue($this->{{ property.name }}, null);
     ${{ property.name }} && $property->setValue(${{ property.name }}, $this);
+{% endif %}
 
     // Disallow acces again.
     $property->setAccessible(false);
