return null for get with nullable type

--- a/src/Resources/templates/get.php.twig
+++ b/src/Resources/templates/get.php.twig
@@ -38,7 +38,7 @@ public function {{ getter }}()
         ));
     }
 {% endif %}
-{% if (not property.willGenerateStrict or property.isNullable and property.isComplexType) %}
+{% if (not property.willGenerateStrict or property.isNullable) %}
 
     if ($this->{{ property.name }} === null) {
         return null;
