--- a/src/Resources/templates/set.php.twig
+++ b/src/Resources/templates/set.php.twig
@@ -23,7 +23,7 @@
  * @throws \InvalidArgumentException if value is not of the right type
  {% endif -%}
  {% if property.type == 'integer' -%}
- * @throws \DomainException if the intger value is outside of the domain on this machine
+ * @throws \DomainException if the integer value is outside of the domain on this machine
  {% endif -%}
  {% if property.length -%}
  * @throws \LengthException if the length of the value is to long
