--- a/src/Resources/templates/get.php.twig
+++ b/src/Resources/templates/get.php.twig
@@ -1,7 +1,7 @@
 /**
  {% if property.documentation -%}
  {% perline %}
- * {{ property.documentation }}
+ * {{ property.documentation | raw}}
  {% endperline %}
  {% else -%}
  * {{  property.type == 'boolean' ? 'Is' : 'Get' }} {{ property.name }}
